--- a/styles/abstract/_variables.scss
+++ b/styles/abstract/_variables.scss
@@ -2,6 +2,7 @@
 $color-brand: rgba(123, 238, 199, 1);
 $color-text: #60606E;
 $color-additional: rgba(255, 255, 255, 1);
+$color-shadow: lightgray;
 
 //Fonts
 $text-font: 'Open Sans', sans-serif;
