--- a/styles/components/_price-tag.scss
+++ b/styles/components/_price-tag.scss
@@ -4,6 +4,33 @@
 .price-tag {
     width: 360px;
     height: 485px;
+    position: relative;
+    transition: all .3s;
+
+    .rec {
+        width: 100%;
+        height: 6px;
+        background-color: $color-brand;
+    }
+
+    .triangle {
+        position: absolute;
+        top: 6px;
+        left: calc(100% - 16px);
+        width: 16px;
+        height: 16px;
+        background-color: $color-brand;
+        background: linear-gradient(45deg, transparent 15px, $color-brand 0);
+    }
+}
+
+.price-tag:hover {
+    box-shadow: 0 0 50px $color-shadow;
+    transform: scale(1.02);
+}
+
+.container {
+    padding: 30px;
 }
 
 .monthly-payment {
@@ -12,7 +39,11 @@
     text-align: center;
     padding: 7px 0;
     text-transform: uppercase;
-    background-color:  $color-brand;
-    
+    background-color: $color-brand;
+    margin-top: 17px;
 }
 
+.list-of-items {
+    margin: 45px 0;
+    line-height: 24px;
+}
