--- a/styles/layouts/_intro.scss
+++ b/styles/layouts/_intro.scss
@@ -1,10 +1,5 @@
-@mixin intro {
-    width: 721px;
-    margin: 100px auto 82px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    text-align: center;
+@import "../abstract/mixins";
+
+.intro {
+    @include intro;
 }
