--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,4 +7,5 @@
 @import "./layouts/columns";
 @import "./layouts/tools";
 @import "./layouts/pricing-plans";
-
+@import "./layouts/get-in-touch";
+@import "./layouts/footer";
