--- a/styles/abstract/_variables.scss
+++ b/styles/abstract/_variables.scss
@@ -1,6 +1,7 @@
 //Colors
 $color-brand: rgba(123, 238, 199, 1);
 $color-text: #60606E;
+$color-text-additional: #999999;
 $color-additional: rgba(255, 255, 255, 1);
 $color-shadow: lightgray;
 
