--- a/styles/components/_icon.scss
+++ b/styles/components/_icon.scss
@@ -6,4 +6,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    
+    .icon {
+        @include icon-rectangle;
+        width: 51px;
+        height: 21px;
+        top: 55%;
+        left: -3%;
+        transform: translate(0, 0);
+    }
 }
