Added responsive and animation

--- a/styles/abstract/_variables.scss
+++ b/styles/abstract/_variables.scss
@@ -8,3 +8,8 @@ $color-shadow: lightgray;
 //Fonts
 $text-font: 'Open Sans', sans-serif;
 $headings-font: 'Montserrat', sans-serif;
+
+//Widths
+$tablet-width: 768px;
+$mobile-big-width: 480px;
+$mobile-small-width: 320px;
