--- a/styles/components/_price-tag.scss
+++ b/styles/components/_price-tag.scss
@@ -4,9 +4,35 @@
 .price-tag {
     box-sizing: border-box;
     width: 360px;
-    height: 485px;
     position: relative;
     transition: all .3s;
+
+    @include media-tablet {
+        width: 200px;
+        
+        h2 {
+            font-size: 24px;
+        }
+
+        h5 {
+            font-size: 12px;
+        }
+        p {
+            font-size: 13px;
+        }
+    }
+
+    @include media-mobile-big {
+        margin-bottom: 30px;
+        box-shadow: 0 0 20px $color-shadow;
+
+        h5 {
+            font-size: 14px;
+        }
+        p {
+            font-size: 14px;
+        }
+    }
 
     .rec {
         width: 100%;
@@ -28,6 +54,11 @@
 .price-tag:hover {
     box-shadow: 0 0 50px $color-shadow;
     transform: scale(1.02);
+
+    @include media-mobile-big {
+        transform: none;
+        box-shadow: 0 0 20px $color-shadow;
+    }
 }
 
 .container {
@@ -42,9 +73,20 @@
     text-transform: uppercase;
     background-color: $color-brand;
     margin-top: 12px;
+
+    @include media-tablet {
+        width: 130px;
+    }
+
+    @include media-mobile-big {
+        width: 145px;
+    }
 }
 
 .list-of-items {
     margin: 44px 0 48px;
     line-height: 22px;
+    @include media-tablet {
+        margin: 20px 0;
+    }
 }
