--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -7,9 +7,19 @@
     background-color: $color-additional;
     padding: 18px 20px;
 
+    @include media-mobile-big {
+        width: 100%;
+    }
+
     h3 {
         padding-left: 5px;
         line-height: 30px;
+
+        br {
+            @include media-mobile-small {
+                display: none;
+            }
+        }
     }
 
     p {
@@ -25,4 +35,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+
+    @include media-mobile-big {
+        flex-wrap: nowrap;
+    }
+
+    @include media-mobile-small {
+        flex-wrap: wrap;
+    }
 }
