--- a/styles/components/_input.scss
+++ b/styles/components/_input.scss
@@ -10,6 +10,11 @@ input {
     @include headings ($headings-font, $color-text, 14px);
     font-weight: 700;
     padding: 0 20px;
+    @include media-mobile-small {
+        border-right: 1px solid $color-shadow;
+        width: 100%;
+        margin-bottom: 10px;
+    }
 }
 
 input::placeholder {
