--- a/styles/layouts/_get-in-touch.scss
+++ b/styles/layouts/_get-in-touch.scss
@@ -7,11 +7,28 @@
 }
 
 .work-together {
-    
+    @include media-tablet {
+        text-align: center;
+        margin-bottom: 30px;
+        padding: 0 100px;
+    }
+
+    @include media-mobile-big {
+        padding: 0;
+    }
+
     h2 {
         @include headings ($headings-font, $color-additional, 30px);
         margin: -12px 0 15px;
         line-height: 48px;
     }
+    
+    
+}
 
+.get-in-touch__form {
+    @include media-tablet {
+        flex-direction: column;
+        align-items: center;
+    }
 }
