--- a/styles/layouts/_pricing-plans.scss
+++ b/styles/layouts/_pricing-plans.scss
@@ -6,6 +6,13 @@
 
 .pricing-plans {
     padding: 45px 0 156px;
+    @include media-tablet {
+        padding: 50px 0;
+    }
+
+    @include media-mobile-big {
+        padding: 30px 0;
+    }
 }
 
 .pricing-plans__intro {
