--- a/styles/layouts/_wrapper.scss
+++ b/styles/layouts/_wrapper.scss
@@ -1,4 +1,12 @@
 .wrapper {
     max-width: 1140px;
     margin: auto;
+
+    @include media-tablet {
+        padding: 0 46px;
+    }
+
+    @include media-mobile-big {
+        padding: 0 30px;
+    }
 }
