--- a/styles/main.css
+++ b/styles/main.css
@@ -464,6 +464,16 @@ h1 {
   text-transform: uppercase;
   margin: 0;
 }
+@media (max-width: 320px) {
+  h1 {
+    font-family: "Montserrat", sans-serif;
+    color: #60606E;
+    font-size: 30px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 0;
+  }
+}
 
 h2 {
   font-family: "Montserrat", sans-serif;
@@ -473,6 +483,16 @@ h2 {
   text-transform: uppercase;
   margin: 0;
 }
+@media (max-width: 320px) {
+  h2 {
+    font-family: "Montserrat", sans-serif;
+    color: #60606E;
+    font-size: 24px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 0;
+  }
+}
 
 h3 {
   font-family: "Montserrat", sans-serif;
@@ -481,6 +501,16 @@ h3 {
   font-weight: 700;
   text-transform: uppercase;
   margin: 0;
+}
+@media (max-width: 320px) {
+  h3 {
+    font-family: "Montserrat", sans-serif;
+    color: #60606E;
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 0;
+  }
 }
 
 h4 {
@@ -505,12 +535,27 @@ h5 {
   max-width: 1140px;
   margin: auto;
 }
+@media (max-width: 768px) {
+  .wrapper {
+    padding: 0 46px;
+  }
+}
+@media (max-width: 480px) {
+  .wrapper {
+    padding: 0 30px;
+  }
+}
 
-.hamburger-menu {
+#hamburger-menu {
   cursor: pointer;
 }
-.hamburger-menu img {
+#hamburger-menu img {
   margin-top: 5px;
+  transition: all 0.3s;
+}
+
+.hamburger-menu_rotate img {
+  transform: rotate(-90deg);
 }
 
 .header {
@@ -518,6 +563,11 @@ h5 {
   background-repeat: no-repeat;
   background-position: center;
   margin-bottom: 101px;
+}
+@media (max-width: 768px) {
+  .header {
+    margin-bottom: 50px;
+  }
 }
 
 .header__wrapper {
@@ -534,6 +584,85 @@ h5 {
   margin: 0;
   font-weight: 700;
   text-decoration: none;
+}
+.header__wrapper .navigation {
+  position: relative;
+  width: 800px;
+}
+.header__wrapper .navigation #header__navigation__items {
+  position: absolute;
+  padding-left: 0px;
+  left: 0%;
+  margin: auto;
+  top: -10px;
+  opacity: 0;
+}
+@media (max-width: 768px) {
+  .header__wrapper .navigation #header__navigation__items {
+    left: 6%;
+  }
+}
+@media (max-width: 480px) {
+  .header__wrapper .navigation #header__navigation__items {
+    left: 15%;
+  }
+}
+@media (max-width: 320px) {
+  .header__wrapper .navigation #header__navigation__items {
+    left: 3%;
+  }
+}
+.header__wrapper .navigation .header__navigation__items_open {
+  animation: open 0.3s linear normal;
+}
+@keyframes open {
+  from {
+    opacity: 0;
+    top: -35px;
+  }
+  to {
+    opacity: 1;
+    top: -10px;
+  }
+}
+.header__wrapper .navigation .header__navigation__items_close {
+  animation: close 0.3s normal;
+}
+@keyframes close {
+  from {
+    opacity: 1;
+    top: -10px;
+  }
+  to {
+    opacity: 0;
+    top: -35px;
+  }
+}
+.header__wrapper .navigation li {
+  display: inline-block;
+  padding: 0 25px;
+  cursor: pointer;
+}
+@media (max-width: 768px) {
+  .header__wrapper .navigation li {
+    padding: 0 10px;
+  }
+}
+@media (max-width: 480px) {
+  .header__wrapper .navigation li {
+    width: 200px;
+    text-align: center;
+    padding: 30px 0;
+    background-color: white;
+  }
+}
+@media (max-width: 320px) {
+  .header__wrapper .navigation li {
+    width: 150px;
+    text-align: center;
+    padding: 30px 0;
+    background-color: white;
+  }
 }
 
 .promo__content {
@@ -563,6 +692,19 @@ h5 {
   align-items: center;
   text-align: center;
   text-align: center;
+}
+@media (max-width: 768px) {
+  .intro {
+    width: auto;
+    padding: 0 46px;
+    margin-bottom: 50px;
+  }
+}
+@media (max-width: 320px) {
+  .intro {
+    padding: 0 10px;
+    margin-bottom: 40px;
+  }
 }
 
 /*!
@@ -8807,13 +8949,63 @@ readers do not read off random characters that represent icons */
 .products__description {
   line-height: 30px;
 }
+@media (max-width: 768px) {
+  .products__description {
+    text-align: justify;
+  }
+}
+@media (max-width: 480px) {
+  .products__description {
+    text-align: justify;
+  }
+}
 .products__description p {
   margin-top: -8px;
+}
+
+@media (max-width: 768px) {
+  div.products__description__columns {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-direction: row;
+    justify-content: center;
+  }
+  div.products__description__columns > * {
+    flex-basis: 48.5%;
+  }
+}
+@media (max-width: 320px) {
+  div.products__description__columns {
+    display: block;
+    margin-left: 10px;
+  }
 }
 
 .products__description__column {
   margin-top: 27px;
   line-height: 24px;
+}
+@media (max-width: 768px) {
+  .products__description__column {
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 768px) {
+  .products__description__column p {
+    margin-left: 50px;
+  }
+}
+@media (max-width: 768px) {
+  .products__description__column p {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 320px) {
+  .products__description__column:last-child {
+    margin-top: -15px;
+  }
 }
 
 .layout-2-column {
@@ -8824,6 +9016,17 @@ readers do not read off random characters that represent icons */
 .layout-2-column > * {
   flex-basis: 48.5%;
 }
+@media (max-width: 768px) {
+  .layout-2-column {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+@media (max-width: 768px) {
+  .layout-2-column {
+    flex-wrap: nowrap;
+  }
+}
 
 .layout-4-column {
   display: flex;
@@ -8833,6 +9036,16 @@ readers do not read off random characters that represent icons */
 .layout-4-column > * {
   flex-basis: 23%;
 }
+@media (max-width: 480px) {
+  .layout-4-column {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .layout-4-column > * {
+    flex-basis: 48.5%;
+  }
+}
 
 .layout-3-column {
   display: flex;
@@ -8841,6 +9054,28 @@ readers do not read off random characters that represent icons */
 }
 .layout-3-column > * {
   flex-basis: 31.5%;
+}
+@media (max-width: 480px) {
+  .layout-3-column {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    justify-content: center;
+  }
+  .layout-3-column > * {
+    flex-basis: 70%;
+  }
+}
+@media (max-width: 320px) {
+  .layout-3-column {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    justify-content: center;
+  }
+  .layout-3-column > * {
+    flex-basis: 100%;
+  }
 }
 
 .tool__icon {
@@ -8876,6 +9111,11 @@ readers do not read off random characters that represent icons */
   align-items: center;
   text-align: center;
 }
+@media (max-width: 480px) {
+  .tool {
+    margin-bottom: 30px;
+  }
+}
 .tool h4 {
   margin-top: 23px;
 }
@@ -8886,6 +9126,16 @@ readers do not read off random characters that represent icons */
 
 .tools {
   padding: 106px 0 94px;
+}
+@media (max-width: 768px) {
+  .tools {
+    padding: 50px 0;
+  }
+}
+@media (max-width: 480px) {
+  .tools {
+    padding: 20px 0;
+  }
 }
 
 .intro {
@@ -8898,13 +9148,51 @@ readers do not read off random characters that represent icons */
   text-align: center;
   text-align: center;
 }
+@media (max-width: 768px) {
+  .intro {
+    width: auto;
+    padding: 0 46px;
+    margin-bottom: 50px;
+  }
+}
+@media (max-width: 320px) {
+  .intro {
+    padding: 0 10px;
+    margin-bottom: 40px;
+  }
+}
 
 .price-tag {
   box-sizing: border-box;
   width: 360px;
-  height: 485px;
   position: relative;
   transition: all 0.3s;
+}
+@media (max-width: 768px) {
+  .price-tag {
+    width: 200px;
+  }
+  .price-tag h2 {
+    font-size: 24px;
+  }
+  .price-tag h5 {
+    font-size: 12px;
+  }
+  .price-tag p {
+    font-size: 13px;
+  }
+}
+@media (max-width: 480px) {
+  .price-tag {
+    margin-bottom: 30px;
+    box-shadow: 0 0 20px lightgray;
+  }
+  .price-tag h5 {
+    font-size: 14px;
+  }
+  .price-tag p {
+    font-size: 14px;
+  }
 }
 .price-tag .rec {
   width: 100%;
@@ -8925,6 +9213,12 @@ readers do not read off random characters that represent icons */
   box-shadow: 0 0 50px lightgray;
   transform: scale(1.02);
 }
+@media (max-width: 480px) {
+  .price-tag:hover {
+    transform: none;
+    box-shadow: 0 0 20px lightgray;
+  }
+}
 
 .container {
   padding: 25px 30px 27px;
@@ -8939,10 +9233,25 @@ readers do not read off random characters that represent icons */
   background-color: #7beec7;
   margin-top: 12px;
 }
+@media (max-width: 768px) {
+  .monthly-payment {
+    width: 130px;
+  }
+}
+@media (max-width: 480px) {
+  .monthly-payment {
+    width: 145px;
+  }
+}
 
 .list-of-items {
   margin: 44px 0 48px;
   line-height: 22px;
+}
+@media (max-width: 768px) {
+  .list-of-items {
+    margin: 20px 0;
+  }
 }
 
 .button {
@@ -8978,6 +9287,16 @@ readers do not read off random characters that represent icons */
 
 .pricing-plans {
   padding: 45px 0 156px;
+}
+@media (max-width: 768px) {
+  .pricing-plans {
+    padding: 50px 0;
+  }
+}
+@media (max-width: 480px) {
+  .pricing-plans {
+    padding: 30px 0;
+  }
 }
 
 .pricing-plans__intro {
@@ -9026,6 +9345,13 @@ input {
   font-weight: 700;
   padding: 0 20px;
 }
+@media (max-width: 320px) {
+  input {
+    border-right: 1px solid lightgray;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
 
 input::placeholder {
   font-family: "Montserrat", sans-serif;
@@ -9042,9 +9368,19 @@ input::placeholder {
   background-color: white;
   padding: 18px 20px;
 }
+@media (max-width: 480px) {
+  .stay-informed {
+    width: 100%;
+  }
+}
 .stay-informed h3 {
   padding-left: 5px;
   line-height: 30px;
+}
+@media (max-width: 320px) {
+  .stay-informed h3 br {
+    display: none;
+  }
 }
 .stay-informed p {
   font-size: 16px;
@@ -9059,12 +9395,34 @@ input::placeholder {
   flex-direction: row;
   flex-wrap: wrap;
 }
+@media (max-width: 480px) {
+  .stay-informed__form {
+    flex-wrap: nowrap;
+  }
+}
+@media (max-width: 320px) {
+  .stay-informed__form {
+    flex-wrap: wrap;
+  }
+}
 
 .get-in-touch {
   background-color: #7beec7;
   padding: 50px 0;
 }
 
+@media (max-width: 768px) {
+  .work-together {
+    text-align: center;
+    margin-bottom: 30px;
+    padding: 0 100px;
+  }
+}
+@media (max-width: 480px) {
+  .work-together {
+    padding: 0;
+  }
+}
 .work-together h2 {
   font-family: "Montserrat", sans-serif;
   color: white;
@@ -9074,6 +9432,13 @@ input::placeholder {
   margin: 0;
   margin: -12px 0 15px;
   line-height: 48px;
+}
+
+@media (max-width: 768px) {
+  .get-in-touch__form {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .footer {
@@ -9091,22 +9456,58 @@ input::placeholder {
   font-size: 14px;
   margin: 0;
 }
+@media (max-width: 768px) {
+  .navigation {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media (max-width: 320px) {
+  .navigation p {
+    text-align: center;
+  }
+}
 
 .navigation__items {
   list-style-type: none;
   padding-left: 3px;
 }
+@media (max-width: 480px) {
+  .navigation__items {
+    text-align: center;
+  }
+}
 .navigation__items li {
   cursor: pointer;
   display: inline-block;
 }
+@media (max-width: 480px) {
+  .navigation__items li {
+    padding: 0 20px 20px 20px;
+  }
+}
+@media (max-width: 320px) {
+  .navigation__items li {
+    padding: 0 10px 20px 10px;
+  }
+}
 .navigation__items .dash {
   padding: 0 15px;
+}
+@media (max-width: 480px) {
+  .navigation__items .dash {
+    display: none;
+  }
 }
 
 .social-medias {
   text-align: right;
   margin-top: 9px;
+}
+@media (max-width: 768px) {
+  .social-medias {
+    text-align: center;
+  }
 }
 .social-medias a {
   text-decoration: none;
