--- a/styles/abstract/_mixins.scss
+++ b/styles/abstract/_mixins.scss
@@ -29,7 +29,7 @@
 
 @mixin columns ($width){
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-between;
     >* {
         flex-basis: $width;
