--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,9 @@
+//abstract
+@import "./abstract/mixins";
+@import "./abstract/variables";
+
+//base
+@import "./base/animation";
 @import "./base/base";
 
 //Layouts
