--- a/styles/layouts/_header.scss
+++ b/styles/layouts/_header.scss
@@ -1,4 +1,3 @@
-@import "../abstract/mixins";
 @import "../components/hamburder-menu";
 
 .header {
@@ -6,6 +5,7 @@
     background-repeat: no-repeat;
     background-position: center;
     margin-bottom: 101px;
+
     @include media-tablet {
         margin-bottom: 50px;
     }
@@ -27,64 +27,53 @@
     .navigation {
         position: relative;
         width: 800px;
-        #header__navigation__items {
+
+        #header__navigation {
             position: absolute;
             padding-left: 0px;
             left: 0%;
             margin: auto;
             top: -10px;
             opacity: 0;
+
             @include media-tablet {
                 left: 6%;
             };
+
             @include media-mobile-big {
                 left: 15%;
             };
+
             @include media-mobile-small {
                 left: 3%;
             }
         }
-        .header__navigation__items_open {
-            @keyframes open {
-                from {
-                    opacity: 0;
-                    top: -35px;
-                }
-                to {
-                    opacity: 1;
-                    top: -10px;
-                }
-            }
+
+        .header__navigation_open {
             animation: open .3s linear normal;
         }
 
-        .header__navigation__items_close {
-            @keyframes close {
-                from {
-                    opacity: 1;
-                    top: -10px;
-                }
-                to {
-                    opacity: 0;
-                    top: -35px;
-                }
-            }
+        .header__navigation_close {
             animation: close .3s normal;
         }
 
         li {
             display: inline-block;
-            padding: 0 25px;
+            padding: 0 25px 20px;
             cursor: pointer;
+
             @include media-tablet {
-                padding: 0 10px;
+                padding: 20px;
+                text-align: center;
             };
+
             @include media-mobile-big {
                 width: 200px;
                 text-align: center;
                 padding: 30px 0;
                 background-color: $color-additional;
-            }
+            };
+
             @include media-mobile-small {
                 width: 150px;
                 text-align: center;
