--- a/styles/layouts/_header.scss
+++ b/styles/layouts/_header.scss
@@ -35,6 +35,7 @@
             margin: auto;
             top: -10px;
             opacity: 0;
+            text-align: center;
 
             @include media-tablet {
                 left: 6%;
