--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -575,7 +575,8 @@ h5 {
 }
 
 .header {
-  background-image: url(../../images/backgrounds/top.png);
+  background-image: url(../images/backgrounds/top.png);
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   margin-bottom: 101px;
