--- a/src/sass/components/_list-icon.scss
+++ b/src/sass/components/_list-icon.scss
@@ -1,7 +1,5 @@
-@import "../../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
-@import "../../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss";
-
-.fa-square-check {
-    color: $color-brand;
+.list-icon {
+    width: 11px;
+    height: 11px;
     margin-right: 7px;
 }
