--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,7 +1,7 @@
 @import "../components/hamburder-menu";
 
 .header {
-    background-image: url(../../images/backgrounds/top.png);
+    background-image: url(~img/top.png);
     background-repeat: no-repeat;
     background-position: center;
     margin-bottom: 101px;
